fix(BlockPostHeader): spacings

--- a/Components/BlockPostHeader/_style.scss
+++ b/Components/BlockPostHeader/_style.scss
@@ -1,7 +1,7 @@
 [is='flynt-block-post-header'] {
   .header {
-    margin-bottom: calc(var(--component-spacing-mobile) / 2);
-    padding: var(--component-spacing) 0 calc(var(--component-spacing-mobile) / 2);
+    margin-bottom: calc(var(--component-spacing) / 2);
+    padding: var(--component-spacing) 0 calc(var(--component-spacing) / 2);
 
     @media (min-width: $breakpoint-tablet) {
       margin-bottom: calc(var(--component-spacing-tablet) / 2);
@@ -13,7 +13,7 @@
       padding: var(--component-spacing) 0 var(--component-spacing-desktop);
 
       @media (min-width: $breakpoint-tablet) {
-        padding: var(--component-spacing) 0 calc(var(--component-spacing-tablet) * 2);
+        padding: var(--component-spacing-tablet) 0 calc(var(--component-spacing-tablet) * 2);
       }
     }
   }
